--- a/app/src/main/res/layout/activity_default_apps.xml
+++ b/app/src/main/res/layout/activity_default_apps.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/frame_default"
@@ -7,17 +7,19 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="com.brandnew.greatlauncher.activity.DefaultAppsActivity">
-    <!--was
-    android:background="@color/half_blue"
--->
 
 
-    <!--<EditText-->
-    <!--android:id="@+id/search_bar_default"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:hint="@string/search_apps"-->
-    <!--android:paddingLeft="20dp" />-->
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    <EditText
+    android:id="@+id/search_bar_default"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:hint="@string/search_apps"
+    android:paddingLeft="20dp" />
 
     <View
         android:layout_width="match_parent"
@@ -35,14 +37,7 @@
             android:layout_height="match_parent"
             android:numColumns="auto_fit" />
     </FrameLayout>
-    <!--    android:background="@color/half_blue"-->
 
+    </LinearLayout>
 
-    <!--<FrameLayout-->
-    <!--android:id="@+id/frame_default_apps"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="match_parent"-->
-    <!--android:visibility="gone">-->
-    <!--</FrameLayout>-->
-
-</LinearLayout>
+</RelativeLayout>
