--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -118,8 +118,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_toLeftOf="@id/right"
-        android:visibility="gone"
-        >
+        android:visibility="gone">
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/list_view_left"
@@ -139,28 +138,6 @@
         android:visibility="gone"
         tools:context="com.brandnew.greatlauncher.fragments.MenuFragment"
         tools:layout="@layout/fragment_menu" />
-
-
-
-    <!--<FrameLayout-->
-        <!--android:id="@+id/new_feature"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_centerInParent="true"-->
-        <!--android:background="@color/blue"-->
-        <!--android:visibility="gone"-->
-        <!--/>-->
-
-    <!--<menu-->
-        <!--android:id="@+id/new_feature"-->
-        <!--android:name="com.brandnew.greatlauncher.fragments.MenuFragment"-->
-        <!--android:layout_width="300dp"-->
-        <!--android:layout_height="200dp"-->
-        <!--android:layout_alignParentBottom="true"-->
-        <!--android:layout_centerHorizontal="true"-->
-        <!--android:visibility="gone"-->
-        <!--tools:context="com.brandnew.greatlauncher.fragments.MenuFragment"-->
-        <!--tools:layout="@layout/new_feature_menu" />-->
 
 
 </RelativeLayout>
